--- a/style.css
+++ b/style.css
@@ -1,91 +1,294 @@
+* {
+    margin: 0;
+    padding: 0;
+  }
+  
 nav {
-  background-color: #C12127;
-  color: rgba(255,255,255,0.8);
-  padding-top: 15px;
-  height: 50px;
-}
+    background-color: #C12127;
+    color: rgba(255,255,255,0.8);
+    padding-top: 20px;
+    height: 20px;
+  }
   
-nav a {
-  color: rgba(255,255,255,0.8);
-  text-decoration: none;
-}
+  nav a {
+    color: rgba(255,255,255,0.8);
+    text-decoration: none;
+  }
 
-.top-left {
-  display: inline-block;
-  float: left;
-  padding: 0;
-  margin: 0 20px 0 0;
-  text-decoration: none;
-}
+  .top-left {
+    display: inline-block;
+    float: left;
+    padding: 0;
+    margin: 0 20px 0 0;
+  }
 
-.top-links {
-  display: inline-block;
-  float: right;
-  padding: 0;
-  margin: 0 20px 0 0;
-}
-
-.top-links li {
-  display: inline-block;
-  margin: 0 10px;
-}
-
-header {
-  background-color: rgb(32, 101, 136) ;
-  background-image: url(images/city-scape.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: relative;
-  height: 400pt;
-}
-
-.logo-header{
-  height: 40px;
-  padding-left: 8pt;
-  padding-right: 12pt;
-  padding-top: 7pt;
-  padding-bottom: 7pt;
-}
-
-.logo-header-bear{
-  height: 25px;
-  padding-top: 7pt;
-}
-
-input{
-  background-color: rgb(40, 78, 104);
-  border-color: rgb(47, 46, 46);
-  border-style: solid;
-
-  width: inherit;
-  height: 40px;
-  margin-top: 7pt;
+  .top-links {
+    display: inline-block;
+    float: right;
+    padding: 0;
+    margin: 0 20px 0 0;
+  }
   
-}
+  .top-links li {
+    display: inline-block;
+    margin: 0 10px;
+  }
 
-.search-button{
-  background-color: rgb(40, 78, 104);
-  background-image: url(images/magnifying-glass.png);
-  background-size: 35%;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-color: rgb(47, 46, 46);
-  border-style: solid;
+  /*Header*/
 
-  height: 40px;
-  width: 40px;
-  margin-top: 7pt;
-  float: right;
-}
+  header{
+      background-color: rgb(32, 101, 136) ;
+      background-image: url(images/city-scape.svg.svg);
+      background-position: center;
+      position: relative;
+      background-repeat: no-repeat;
+      background-size: contain;
+      height: 200%; 
+      padding-bottom: 150px;
+  }
 
-#principal {
-  background-color: burlywood; 
-  display: flex;
-}
+  .logo-header-npm {
+    height: 40px;
+    padding-left: 8pt;
+    padding-right: 12pt;
+    padding-top: 7pt;
+    padding-bottom: 7pt;
+  }
 
-.search{
-  width: 75%;
-  background-color: darkmagenta;
-  margin-top: 0pt;
-}
+  .button-find form button{
+    color: white;
+    background-color: rgb(32, 101, 136);
+    background-image: url(images/126474.svg);
+    background-size: 30%;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-color: rgb(47, 46, 46);
+    border-style: solid;
+
+    height: 36px;
+    width: 35px;
+    margin-top: 6.5pt;
+    float: right;
+    border-style: solid;
+    border-color: grey;
+    display: flex;
+  }
+/*find package*/
+
+  .button-find form{
+    display: flex;
+    width: 80%;
+    background-color: grey;
+  }
+
+  .button-find form input{
+    background-color: rgb(31, 82, 111);
+    height: 30px;
+    width: 800px;
+    margin-top: 7pt;
+    border-width: 0.2px;
+    border: solid;
+    border-color: gray;
+  }
+
+  .ul-header{
+    display: flex;
+    align-items: center;
+    float: right;
+    background-color: indigo;
+  }
+  
+  .sing-up img{
+    height: 30px;
+    width: 30px;
+    margin: 10px,10px,10px;
+  }
+
+  .sing-up li{
+    color: white;
+    text-align: center;
+    font-size: 1em;
+    letter-spacing: 1.3px; 
+    list-style: none;
+    width: auto;
+  }
+  
+  .sing-up a{
+    color: white;
+    text-decoration: none;
+  }
+
+  .text{
+    color: white;
+    justify-content: center;
+    text-align: left;
+    width: 50%;
+    height: 70%;
+    padding-left:300px;
+    padding-bottom: 100px;  display: flex;
+
+  }
+
+  .button-submit form button{
+    background-color: rgb(240, 146, 51);
+    color: white;
+    margin: 15px 5px 5px;
+    padding: 10px 25px 12px;
+    border-radius: 18px;
+  }
+
+
+/* section 2*/
+
+
+  .general-information{
+    background-color: rgb(39, 53, 71);
+    color: white;
+  }
+
+  .general-information img{
+    height: 300px;
+    padding-left: 58pt;
+    padding-right: 10pt;
+    padding-top: 40pt;
+    padding-bottom: 10pt;
+  }
+
+  .general-information div{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap
+    
+  }
+
+  .information{
+    /* font-size: 1.2em; */
+    text-align: left; 
+    box-sizing: border-box;
+    margin: 0px 5% 0 5%;
+    padding: 20px; 
+    width: 30%;
+    float: right;
+  }
+
+  .information h1{
+    font-size: 2em;
+    text-align: justify;
+    padding-bottom: 20pt;
+  }
+
+  .information ul{
+    font-size: 1.2em;
+    text-align: justify;
+  }
+
+  .information form input{
+    color: white;
+    background-color:rgb(203, 56, 55);
+    margin: 30px 5px 5px 20%;
+    padding: 8px 25px 8px;
+    border-radius: 18px; 
+    float: left;
+  }
+
+  .sing-up a{
+    color: white;
+    text-decoration: none;
+    /* margin: 10px 5px 5px 20%; */
+  }
+   
+  /*section two*/
+
+  .section-two{
+    background-image: url(images/forklift.svg);;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 300px;
+    padding-top: 50px;
+    position: relative;
+    margin: 0 auto;
+    padding: 70px 0;
+    color: white;
+  }
+
+  .npm-info{
+   justify-content: space-between;
+   flex-direction: row;
+   flex-wrap: wrap;
+   align-items: center;
+   padding-left: 230px;
+   margin: 10px 10px 10px 10px;
+  }
+
+  .npm-info p{
+    font-size: 1em;
+    text-align: left;
+    line-height: 1em;
+    padding-top: 15pt;
+  }
+
+  .install-npm form input{
+   color: white;
+   background-color: rgb(49, 68, 88);
+   margin: 40px 5px 5px 20%;
+   padding: 8px 25px 12px;
+   border-radius: 18px; 
+
+  }
+
+  /* final section */
+
+  .final-section{
+    background-color: white;
+    color: black;
+  }
+
+  .final-box{
+    width: 1200px;
+    margin: 0 auto;
+    padding: 75px 0;
+    font-size: 1.3em;
+    text-align: center;
+    box-sizing: border-box;
+    width: 15%;
+  }
+
+  .final-section h2{
+    font-size: 2em;
+    text-align: center;
+    line-height: 1em;
+  }
+
+  .building-blocks h1{
+    font-size: 2em;
+    text-align: center;
+    line-height: 1em;
+    padding-top: 30pt;
+  }
+
+  .building-blocks p{
+    font-size: 1em;
+    text-align: center;
+    line-height: 1em;
+    padding-top: 15pt;
+  }
+
+  .seccion-four a{
+    color: red;
+    text-decoration: none;
+  }
+
+  /* .final section text{
+    font-size: 1em;
+    font-weight: 10;
+    text-align: csenter;
+    margin: 10px 0;
+  } */
+
+  .seccion-four{
+    display: flex;
+  }
+
+  
+
